Updates to paper and input docs

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -30,26 +30,44 @@ med_open_data_results <- read_csv(here("outputs/data/med_open_data_results.csv")
 
 # Introduction
 
-Scientists use open repositories of papers to more quickly disseminate their research than is possible in traditional journals. These repositories, such as arxiv, bioRxiv, and medRxiv, are a critical component of science and many results build on the work published there. So it is important that the results that are published are credible. These repositories are not peer-reviewed, and, in general, anyone with appropriate academic credentials can submit a paper. 
+Scientists use open repositories of papers to more quickly disseminate their research than is possible in traditional journals. These repositories, such as arxiv, bioRxiv, and medRxiv, are a critical component of science and many results build on the work published there, thus it is important that the results that are published are credible. Pre-print repositories, specifically medRxiv, have drawn unprecedented attention in the context of the 2019 novel coronavirus (COVID-19) pandemic and the changes it has thrust upon the scientific community [@else2020]. These repositories are not peer-reviewed, and, in general, anyone with appropriate academic credentials can submit a paper. 
 
-While neither peer-review nor credentials are a panacea nor a guarantee of quality, given the importance of these repositories, it is important that scientists impose on themselves various standards for their results. Following @weissgerber2021automated we examine papers about COVID-19 published to bioRxiv and medRxiv during 2020. We search for markers of open science and reproducibility, such as X, Y, and Z. 
+While neither peer-review nor credentials are a panacea nor a guarantee of quality, given the importance of these repositories, it is important that scientists impose on themselves various standards for their results. Following @weissgerber2021automated we examine papers about COVID-19 published to medRxiv throughout 2020. We search for markers of open science as indicators of reproducibility, specifically open data and open code. 
 
-We find that A, B, and C.
+We find that approximately 81 per cent of sampled papers contain neither open data nor open code markers. Examining trends over time, we find that the proportion of pre-prints containing open data or code markers has fluctuated but shown no obvious increasing or decreasing trend throughout the pandemic. We also find that the presence of open data or open code markers has little influence on a pre-print's future publication, while the subset of sampled pre-prints that has been published contains an overall lower proportion of papers with these markers. Finally, we briefly examine the presence of open data and code markers in specific types of pre-prints, namely modelling, simulation, and machine learning research.
 
-The remainder of this paper is structured as follows...
-
-
-
+The remainder of this paper is structured as follows: first, we discuss the process of constructing our data set through retrieving pre-prints from the medRxiv repository and mining them for open data and open code markers. Then we will explore some key findings in this raw data and explore some logistic regression models that support these findings. Lastly we will discuss the implications of these findings in the broader context of reproducibility and science during the COVID-19 pandemic, as well as next steps to expand on our findings and questions raised in the research process.
 
 # Data & Methodology
 
 Our primary data set consists of information extracted from the medRxiv repository combined with output from running a sample of COVID-19-related pre-prints through the Open Data Detection in Publications (ODDPub) text mining algorithm [@citePDDPub], using the `oddpub` package [@citeODDPubpackage]. 
 
-We constructed this data set by first creating a local copy of the medRxiv repository via the medRxiv API and then filtering for papers related to the COVID-19 pandemic through several keyword searches to create our sampling frame (n = 9,929, including only the most recent version of any given pre-print). This data includes the following variables for each pre-print in the repository: title, abstract, author(s), date posted, research field, DOI, version number, corresponding author, corresponding author's institutional affiliation, and published DOI (if the paper has since been published in a peer reviewed journal). 
+We constructed this data set by first creating a local copy of the medRxiv repository via the medRxiv API and then filtering for papers related to the COVID-19 pandemic through several keyword searches to create our sampling frame (N = 9,929, including only the most recent version of any given pre-print). This data includes the following variables for each pre-print in the repository: title, abstract, author(s), date posted, research field, DOI, version number, corresponding author, corresponding author's institutional affiliation, and published DOI (if the paper has since been published in a peer reviewed journal). 
 
-We then selected a random sample of these papers (n = 1,200) to check for open data and code markers using the ODDPub algorithm. This required downloading each paper as a PDF, converting the PDFs to text files, and conducting the open data and code detecting procedure to produce a results table indicating the presence of open data or open code markers in each paper (with a value of TRUE or FALSE for each marker and the relevant open data or open code statements when applicable). These PDFs were downloaded and converted to txt files using the `medrxivr` package [@citemedrxivr].
+We then selected a random sample of these papers (N = 1,200) to check for open data and code markers using the ODDPub algorithm. This required downloading each paper as a PDF, converting the PDFs to text files, and conducting the open data and code detecting procedure to produce a results table indicating the presence of open data or open code markers in each paper (with a value of TRUE or FALSE for each marker and the relevant open data or open code statements when applicable). These PDFs were downloaded and converted to text files using the `medrxivr` package [@citemedrxivr].
 
-Our final data set was formed by joining these two tables together via DOI to form a data set including all original, qualitative information for each pre-print alongside its open data and open code status and markers. Broadly, we are unable to find markers of either open data or open code for around 81 per cent of pre-prints (Table \@ref(tab:summarycounts)).
+Our final data set was formed by joining these two tables together via DOI to form a data set including all original, qualitative information for each pre-print alongside its open data and open code status and markers. 
+
+```{r monthly-papers-total, fig.cap = "Number of pre-prints related to COVID-19 posted to medRxiv"}
+# Number of COVID-related papers posted each month in total
+med_results <- read_csv(here::here("outputs/data/med_results.csv")) # All COVID medRxiv papers (9,929)
+
+med_results %>% 
+  group_by(month = floor_date(date, "month")) %>% 
+  summarise(count=n()) %>% 
+  ggplot(aes(month, count)) + 
+  # geom_line(stat="identity") +
+  geom_col() + 
+  labs(title = "Pre-prints Posted per Month",
+       subtitle = "medRxiv, Total = 9,929",
+       x = "Month",
+       y = "Number of Pre-prints") +
+  theme_minimal()
+```
+
+The number of pre-prints posted per month increased dramatically between January and May 2020, reaching its maximum in May and subsequently decreasing. The number of pre-prints posted since August 2020 has remained reasonably steady at around 750 per month (Figure \@ref(fig:monthly-papers-total)). For context, COVID-19 was declared a pandemic by the World Health Organization (WHO) on March 11, 2020, at which point the number of cases globally had just surpassed 118,000 (primarily in east Asia) and the virus had been reported in 114 countries [@citeWHOtimeline].
+
+Broadly, we are unable to find markers of either open data or open code for around 81 per cent of the 1,200 sampled pre-prints. The remaining 19 per cent of pre-prints was comprised of 4 percent of the sample containing markers for open code, 8 percent of the sample with markers for open data, and 7 percent of the sample with markers for both open data and open code (Table \@ref(tab:summarycounts)).
 
 ```{r summarycounts}
 # open data/open code count summary table
@@ -64,152 +82,201 @@ med_open_data_results %>%
         digits = 2)
 ```
 
-We do not see a substantial difference in the presence of markers of open data or code between whether a pre-print ended up being published. There was a low number of papers that had markers of either open data or code in both those that were published and those that were not published (Tables \@ref(tab:open-data-published-summary) and \@ref(tab:open-code-published-summary)). It is important to note here that our dataset imperfectly characterises publication. In particular, it does not have the publication details for some papers that were published. And even if it were a perfect record, there is a publication lag that may skew the results.
+The distribution of total sampled pre-prints and sampled pre-prints with open data or code markers roughly follows that of COVID-19-related pre-prints posted in general (Figure \@ref(fig:monthly-papers-condition-stack)). The proportion of pre-prints with open data or code has fluctuated over time but shows no consistent overall increase or decrease throughout the course of the pandemic, nor in conjunction with increases or decreases in the total number of pre-prints posted to medRxiv (Figure \@ref(fig:monthly-proporiton-of-open). In our data set, only one pre-print was sampled for the month of January 2020. This pre-print contained neither open data nor open code markers, thus the 0 per cent rate of open data and code for this month should be treated as an outlier within the sample.
 
-```{r open-data-published-summary}
-med_open_data_results %>% 
-  group_by(published) %>% 
-  count(is_open_data) %>% 
-  pivot_wider(names_from = is_open_data, values_from = n) %>%
-  mutate(published = ifelse(published == 0, "No", "Yes")) %>%
-  rename("Open Data Markers" = `1`, 
-         "No Open Data Markers" = `0`,
-         Published = published) %>%
+```{r monthly-papers-condition-stack, fig.cap = "Number of pre-prints related to COVID-19 sampled from medRxiv, distinguished by presence of open data or code markers"}
+# Number of papers for each open data/code status per month
+open_status <- 
+  med_open_data_results %>% 
+  select(title, date, is_open_code, is_open_data) %>% 
+  mutate(condition = is_open_data + is_open_code)
+open_status$condition[open_status$condition == 2] <- "Both"
+open_status$condition[open_status$condition == 0] <- "Neither"
+open_status$condition[open_status$condition == 1 & open_status$is_open_code == 1] <- "Open Code"
+open_status$condition[open_status$condition == 1 & open_status$is_open_data == 1] <- "Open Data"
+
+open_status %>% 
+  ggplot() + 
+  geom_bar(aes(x = factor(floor_date(date, "month")), 
+               fill=factor(condition, levels = c("Neither", "Open Code", "Open Data", "Both")), 
+               position = "stack")) +
+  labs(fill = "Type of Marker") +
+  scale_x_discrete(breaks=c("2020-01-01","2020-04-01","2020-07-01", "2020-10-01", "2021-01-01"), 
+                   labels=c("Jan 2020","Apr 2020","Jul 2020", "Oct 2020", "Jan 2021")) +
+  ylab("Number of Pre-prints") +
+  xlab("Month") +
+  labs(title="Sampled Pre-prints by Month", subtitle="medRxiv, Total = 1,200") +
+  theme_minimal()
+```
+
+```{r proportion-of-open, fig.cap= "Proportion of pre-prints in sample with open data or open code markers by month"}
+# Proportion of papers posted with open data or open code each month
+colors <- c("Open Data" = "blue", "Open Code" = "green")
+med_month_sum_cov <- 
+  med_open_data_results %>% 
+  group_by(month = floor_date(date, "month")) %>% 
+  summarise(count=n(), prop_open_code = sum(is_open_code)/n(), prop_open_data = sum(is_open_data)/n()) %>% 
+  mutate(num_days = days_in_month(month),
+         daily_rate = count/num_days)
+med_month_sum_cov %>%
+  ggplot() +
+  geom_line(data = med_month_sum_cov, aes(month, prop_open_data, color = "Open Data")) +
+  geom_line(data = med_month_sum_cov, aes(month, prop_open_code, color = "Open Code")) +
+  ggtitle("Proportion of Sampled Pre-prints with Open Data or Code Markers") +
+  xlab("Month") +
+  ylab("Proportion of Pre-prints") +
+  labs(colour = "Type of Marker") + 
+  theme_minimal()
+```
+
+## Publication
+```{r open-published-summary}
+published_open_status <- 
+  med_open_data_results %>% 
+  select(title, date, published, is_open_code, is_open_data) %>% 
+  mutate(condition = is_open_data + is_open_code)
+published_open_status$condition[published_open_status$condition == 2] <- "Both"
+published_open_status$condition[published_open_status$condition == 0] <- "Neither"
+published_open_status$condition[published_open_status$condition == 1 & published_open_status$is_open_code == 1] <- "Open Code"
+published_open_status$condition[published_open_status$condition == 1 & published_open_status$is_open_data == 1] <- "Open Data"
+
+published_open_status %>% 
+  count(published, condition) %>% 
+  pivot_wider(names_from = condition, values_from = n) %>%
+  mutate(published = ifelse(published == 0, "No", "Yes"), `Proportion with Open Data and/or Code`= round((`Open Data` + `Open Code` + Both)/(`Open Data` + `Open Code` + Both + Neither), 2)) %>%
+  rename(Published = published) %>%
   kable(caption = "Counts and proportions of open data markers by whether the pre-print was published",
         booktabs = TRUE)
 ```
 
-```{r open-code-published-summary}
-med_open_data_results %>% 
-  group_by(published) %>% count(is_open_code) %>% 
-  pivot_wider(names_from = is_open_code, values_from = n) %>%
-  rename("No Open Code Markers" = `0`, 
-         "Open Code Markers" = `1`,
-         Published = published) %>%
-  kable(caption = "Counts and proportions of open code markers by whether the pre-print was published",
-        booktabs = TRUE) 
-```
+```{r open-published-stack}
+published_open_status$published[published_open_status$published == 0] <- "Published"
+published_open_status$published[published_open_status$published == 1] <- "Unpublished"
 
-The number of pre-prints posted by month reached its maximum in May 2020, and has remained reasonably steady at around 750 per month since around August 2020 (Figure \@ref(fig:monthly-papers-total)).
-
-```{r monthly-papers-total, fig.cap = "Number of pre-prints related to COVID-19 posted to medRxiv"}
-# Number of COVID-related papers posted each month in total
-med_results <- read_csv(here::here("outputs/data/med_results.csv")) # All COVID medRxiv papers (9,929)
-
-med_results %>% 
-  group_by(month = floor_date(date, "month")) %>% 
-  summarise(count=n()) %>% 
-  ggplot(aes(month, count)) + 
-  # geom_line(stat="identity") +
-  geom_col() + 
-  labs(x = "Month",
-       y = "Number of pre-prints") +
+published_open_status %>% 
+  # mutate(published = ifelse(published == 0, "Unpublished", "Published")) +
+  ggplot() + 
+  geom_bar(aes(x = published, fill=factor(condition, levels = c("Neither", "Open Code", "Open Data", "Both")), position = "stack")) +
+  labs(fill = "Type of Marker") +
+  ylab("Number of Pre-prints") +
+  ggtitle("Pre-prints by Publication Status") +
   theme_minimal()
 ```
 
-```{r monthly-papers-by-condition}
-# Number of papers posted each month from the sample
-# include_graphics(here("outputs/figures/papers_posted_sample.pdf"))
-# Likely don't need this anymore, see monthly-papers-sample-2
-```
+We see that the proportion of pre-prints with open data or code markers among those that have been published is approximately 5 per cent lower than that of pre-prints which have not been published (Table \@ref(tab:open-published-summary)). There was a low number of papers that had markers of either open data or code in both those that were published and those that were not published (Figure \@ref(fig:open-published-stack)). It is important to note here that our data set imperfectly characterizes publication. In particular, it does not have the publication details for some papers that were published, and even if it were a perfect record, there is a publication lag (estimated at an average of 60 days) that may skew the results [@kwon2020].
 
-```{r proportion-of-open-data}
-# Proportion of papers posted with open data or open code each month
-include_graphics(here("outputs/figures/prop_open_per_month.pdf"))
-```
+## Type of Pre-print
 
-```{r monthly-papers-by-condition-stack}
-# Number of papers for each open data/code status per month
-include_graphics(here("outputs/figures/stack_conditions_plot.pdf"))
-```
-- Proportion of open data/code has fluctuated over time but shows no consistent overall increase or decrease over the course of the pandemic
-- Proportion of open data seems to be relatively unimpacted by the number of papers posted to medRxiv in any given month
-- Open code dipped in summer months when posting rate to medRxiv was high, bit questionable
-- Open code follows similar patterns of increase/decrease as data but ultimately is less prevelant in the repository
-
-# Publication
-
-
-
-```{r}
-med_open_data_results %>% 
-  group_by(published) %>% count(is_open_data) %>% 
-  pivot_wider(names_from = is_open_data, values_from = n) %>%
-  rename("Open Data Markers" = `1`, "No Data Code Markers" = `0`) %>% kable()
-```
-
-```{r}
-med_open_data_results %>% 
-  group_by(published) %>% count(is_open_code) %>% 
-  pivot_wider(names_from = is_open_code, values_from = n) %>%
-  rename("No Open Code Markers" = `0`, "Open Code Markers" = `1`) %>% kable()
-```
-
-
-# Type of Paper
-
-```{r}
+```{r stack-by-type}
 # Number of open data/code papers by keyword for different types
-include_graphics(here("outputs/figures/paper_type_keywords_plot.pdf"))
+paper_type_keywords <- 
+  med_open_data_results %>% select(title, abstract, date, is_open_code, is_open_data) %>% 
+  mutate(condition = is_open_data + is_open_code)
+paper_type_keywords$condition[paper_type_keywords$condition == 2] <- "Both"
+paper_type_keywords$condition[paper_type_keywords$condition == 0] <- "Neither"
+paper_type_keywords$condition[paper_type_keywords$condition == 1 & open_status$is_open_code == 1] <- "Open Code"
+paper_type_keywords$condition[paper_type_keywords$condition == 1 & open_status$is_open_data == 1] <- "Open Data"
+paper_type_keywords$`Machine Learning` <- str_detect( paper_type_keywords$title, "machine learning") | 
+                                          str_detect( paper_type_keywords$abstract, "machine learning")
+paper_type_keywords$Simulation <- str_detect( paper_type_keywords$title, "simulate|simulation|simulating") | 
+                                    str_detect( paper_type_keywords$abstract, "simulate|simulation|simulating|simulated")
+paper_type_keywords$modelling <- str_detect( paper_type_keywords$title, "modelling|model|models|modeling") | 
+                                str_detect( paper_type_keywords$abstract, "modelling|model|models|modeling")
+paper_type_keywords <- paper_type_keywords %>% 
+  pivot_longer(cols = c("Machine Learning", "Simulation", "modelling"), names_to = "Type", values_to = "Value") %>%
+  filter(Value == TRUE)
+# Plot
+paper_type_keywords %>% ggplot() + 
+  geom_bar(aes(x = Type, fill=factor(condition, levels = c("Neither", "Open Code", "Open Data", "Both")), position = "stack")) +
+  labs(fill = "Type of Marker") +
+  scale_x_discrete(labels=c("Machine Learning", "modelling", "Simulation")) +
+  ylab("Number of Pre-prints") +
+  xlab("Month") +
+  ggtitle("Sampled Pre-prints by Month") +
+  theme_minimal()
+
 ```
 
-- Once data is restricted to certain types of papers - those including modeling, simulation, or machine learning - the availability of open data and code becomes much higher than the data set overall
-- Relatively small sample size, but still important to note?
-- Also an expected result
+```{r summary-by-type}
+paper_type_keywords %>% 
+  count(Type, condition) %>% 
+  pivot_wider(names_from = condition, values_from = n, values_fill = 0) %>% 
+  mutate(`Proportion with Open Data and/or Code`= round((`Open Data` + `Open Code` + Both)/(`Open Data` + `Open Code` + Both + Neither), 2)) %>%
+  kable(booktabs = TRUE)
+```
 
-
+We performed some simple keyword searches within the titles and abstracts of our data set to examine potential differences in the prevalence of open data or code for specific types of papers. For pre-prints including the term "machine learning" (n = 21), the proportion of pre-prints with open data or code markers rose to 38 per cent, double that of the sample overall (Table \@ref(tab:summary-by-type)). Keywords relating to simulation appeared in 80 sampled pre-prints and keywords related to modelling appeared in over one third of our sampled pre-prints. The latter two categories did not contain pre-prints with open data or code markers at a rate much higher than the general sample, with 22 and 24 per cent of each type of paper containing either open data or open code markers compared to 19 per cent overall. Due to the significant role modelling has played in the context of COVID-19, it is likely that a simple keyword search is not exclusive enough for us to judge this subset as though it only contains pre-prints presenting their own, novel models.
 
 # Model
 
-We run our analysis in `R` [@citeR]. 
+We run our analysis in `R` [@citeR]. We fit generalized linear models with open data and open code markers as binary variables (representing their presence or absence in a pre-print) as functions of the date at which a pre-print was posted.
 
-In this analysis we distinguish between *posting* (the event that a pre-print is uploaded to medRxiv) and *publishing* (the event that the pre-print has subsequently been published in a peer reviewed journal).
+The models below display in greater clarity the negligible role time appears to play in the proportion of pre-prints with open data or open code posted to medRxiv. Both models output negligibly small, non-significant coefficients on the date term, indicating limited influence of the date a pre-print was posted on its likelihood of containing open data or code markers.
 
-```{r}
-# logit model: posting rate vs. open data, publication rate vs. open code
+```{r data-time-model}
+glm(is_open_data ~ date, family = binomial, data = med_open_data_results) %>%
+  summary()
 ```
 
-```{r}
-# logit model: open data/code vs. publication status
-# pub_model <- glm(published ~ is_open_data + is_open_code, family = binomial, data = med_open_data_results)
+```{r code-time-model}
+glm(is_open_code ~ date, family = binomial, data = med_open_data_results) %>%
+  summary()
 ```
 
+We get similar results for publication status as a function of open data or open code presence, however we do see a significant (p < 0.05) coefficient indicating that the presence of open code markers may have a negative influence on a pre-print's likelihood of eventual publication. It is unrealistic to assume that this means pre-prints with open code are less likely to be published on the basis of their code alone. There may be common cause factors involved, such as a disinclination of journals to publish purely computational work as has been the case with pre-print repositories like bioRxiv [@kwon2020].
 
+```{r data-published-model}
+glm(published ~ as.factor(is_open_data), family = binomial, data = med_open_data_results) %>%
+  summary()
+```
+```{r code-published-model}
+glm(published ~ as.factor(is_open_code), family = binomial, data = med_open_data_results) %>%
+  summary()
+```
 
 # Results
 
+Less than 20 per cent of sampled pre-prints indicated any open data or code markers. Of those that did contain markers, 4 per cent contained open code markers only, 8 percent contained open data markers only, and 7 per cent contained both open data and code markers.
+
+We find that time has little influence over the likelihood of a pre-print to have open data or code markers. In the context of the COVID-19 pandemic, this means that the prevalence of open data and code markers has not consistently increased nor decreased over the course of the pandemic, and also appears to be unimpacted by the monthly rate of pre-prints posted to medRxiv (which increased dramatically between January and May 2020 and has fluctuated since). On one hand, it is encouraging to note that open data and code does not appear to have suffered in times of high publication rates, namely April through July 2020. On the other hand, one might hope that more data has become openly available throughout the course of the pandemic, or that the rate of availability of open data or code has improved as the scientific community has recognized the importance of global collaboration in combating the pandemic, neither of which appear to be the case.
+
+The presence of open data or code markers does not appear to have significant influence over whether or not a pre-print posted to medRxiv has subsequently been published in a peer reviewed journal, however the proportion of published pre-prints with open data or code markers appears to be slightly lower than those that have not been published (15 per cent versus 20 per cent). This is not necessarily a significant result given the size of our sample and the potential inaccuracies in the medRxiv API's attempts to identify publication, however it does provide a potential area of further study.
+
+The proportion of pre-prints with open data or code markers is significantly higher among pre-prints with keywords indicating machine learning-based research. This is a somewhat anticipated result, as machine learning tends to rely more heavily on computational and code-focused methodology, however the subset of sampled pre-prints with keywords relating to simulation is very small. On the other hand, the prevalence of pre-prints with open data or code markers only saw a slight increase in the subset of pre-prints with either modelling or simulation keywords. Since the pandemic has seen a rise in scientific and public focus on epidemiological modelling, it is likely that not all papers showing keywords for modelling actually propose their own models which would account for the minimal increase of open data and code markers in this context.
+
 # Discussion
 
-There are many factors that impact the ability of an author to post make their data available
+Transparency and reproducibility are two hallmarks of quality scientific research. Open data and open code contribute greatly to both in allowing the scientific community to more easily verify the authenticity of purported scientific discovery and its supporting evidence, which is especially important in cases where scientific research may quickly and directly impact clinical practice or policy such as during the COVID-19 pandemic. Among a myriad of other impacts on biomedical research, COVID-19 has dramatically increased in the popularity of pre-prints from both a production and consumption stand point. The number of COVID-19 pre-prints posted to medRxiv increased dramatically in the early stages of the pandemic while non-COVID-19 pre-print rates remained consistent. The same trends were apparent in abstracts accessed by medRxiv users, where COVID-19 pre-print abstracts were viewed over 15 times the rate of non-COVID-19 pre-print abstracts [@citeFraser]. For these reasons, it is more important now than ever to examine open science standards and reproducibility within pre-print repositories.
 
-## Open Data/Code in broader context
-- Discussion on open data/code in general and in life/medical sciences
-- Are these a good indicator of reproducibility? How much do these contribute to reproducibility?
+Open data is generally accepted to be beneficial to the scientific process, and to a paper's reproducibility potential, hence it is concerning that over 80 per cent of pre-prints in our sample contained no open data markers. This concern is slightly mitigated by recognition of challenges in working with biomedical data compared with data in other fields, notably privacy and ethics concerns when working with personal data [@Floca2014]. The COVID-19 pandemic has seen an uptake in open science practices globally, as evidenced by the creation of open data repositories such as the dashboard maintained by the Center for Systems Science and Engineering at Johns Hopkins University [@citeCSSE] or the wave of publishers who have removed pay walls from published COVID-19 research [@gill2020]. An important next step may compare open data and code availability in COVID-19 pre-prints with those from other topics posted to medRxiv to examine whether the pandemic has increased transparency from the previous norm.
 
-## First discussion point - Time
-- Important to note that time plays a role in geographic focus in this context - early cases/research in China, then east and Southeast Asia, differences in different local data practices/policies
-- On one hand good that there did not appear to be a drop in proportion of papers with open data/code as posting rates have risen, but also interesting to note that there has not been an overall increase
-- 
+Open code as an open science marker is much more context and field-dependent, as not all biomedical research papers will rely on computational methods for their analyses. However in pre-prints where code comprises a large portion of the methodology or results, posting it openly to repositories like GitHub contributes greatly to a pre-print's potential reproducability. This gains importance as computational methods become increasingly popular in the rush to form predictions about emerging situations with limited data or laboratory research, which was the case for modelling studies in the early days of the COVID-19 pandemic (CITE). We also see growing concern over the quality and consequences of this sort of research, with bioRxiv barring purely computational work [@kwon2020].
 
-## Second discussion point - Eventual Publication
-- See weaknesses
+Many concerns have arisen from the unprecedented rate at which COVID-19 research has been posted and consumed via pre-print servers, particularly in the early stages of the pandemic [@raynaud2021]. Any rushed scientific research has potential to skip (or at least place less precedence on) quality open science practices, thus it may be reasonable to expect a decrease of open data or code markers in the pre-prints posted during times of increased overall posting to medRxiv. In our analysis, we found little relationship between time posted and likelihood of having open data or code markers with the proportion of papers containing these markers fluctuating greatly from month to month and no apparent decrease during periods of increased publication. This suggests that open science practices are more highly influenced by other factors, perhaps publication bias or the nature of the paper itself. On the other hand, we do not see an overall long-term increase in either open data or open code markers throughout our year of analysis which we may expect in the context of the aforementioned open science movements the pandemic has fostered. Although not pre-print specific, @else2020 found that overall research output has fluctuated between different fields and topics (namely modelling disease spread, public health, diagnostics and testing, mental health, and hospital mortality) throughout different stages of the pandemic which may account for some of the fluctuation and overall lack of linear trend over the course of the year.
 
-## Third discussion point - Type of Paper
-- Public health modeling/simulation papers more important near beginning of pandemic when less was understood about COVID as a disease specifically
-- Perhaps contributed to the fact that the rate of open data/code from beginning of pandemic has been consistent throughout despite what we would hope is an increase in availability of COVID-19-related data?
+To emphasize the ongoing need for open data and code in modelling a pandemic, we consider two high profile epidemiological models that emerged in early 2020. modelling was conducted by Imperial College London (ICL) [@ferguson2020] and the Institute for Health Metrics and Evaluation (IHME) at the University of Washington [@murray2020], and both papers were initially posted to pre-print servers. The ICL model went on to become the most cited pre-print as of December 2020 [@else2020], and both had significant influence over policy and public health decisions worldwide [@adam2020]. An independent review of these two models by @jin2020 found that while code and data were openly available for both, only the ICL model was reproducible due to limited transparency on the underlying methodology of the IHME model. The open source nature of these papers was fundamental to reproduction attempts and is a great example of the need for open data and code in reproducing COVID-19 research, particularly in evaluating pre-prints as they begin to influence public decision-making. 
+
+In the context of the above factors, it was disheartening in our analysis to find that the proportion of modelling- and simulation-related pre-prints with open data or code increased only marginally from that of the entire sample. One might hope that modelling papers should universally be subject to the same analysis as conducted by @jin2020 as for the examples above, which is made possible by the availability of relevant code and data. Although our analysis was not particularly robust, this shows a need for future investigation and potential overall improvement in open science standards for these types of pre-prints (of course subject to the data and code considerations already discussed). This need is again emphasized by the new found speed at which pre-print articles may gain public, media, and political attention in the context of the pandemic.
+
+Beyond pre-prints, COVID-19 has had great influence over publication and peer review processes as well, with expedited review timelines for COVID-19 papers at the expense of longer waits for other scientific research [@else2020]. Needless to say, it is important that open data and code standards be maintained in published work as well. Our findings in this regard were two fold: that open data or code markers do not appear to directly influence a pre-print's eventual publication, and that a lower proportion of published papers contain either open data or code markers than the general sample. Both of these raise concerns over publication bias, the potential that journals have favored novel yet less transparent or reproducible papers over those with null results but a high standard of open science practices. Concerns have already been raised through systemic reviews of COVID-19 publications [@raynaud2021], and oversights in data accessibility have lead to high profile retractions of publications in the past, for example two papers from The Lancet and the New England Journal of Medicine that were withdrawn due to concerns over the private nature of their underlying data set [@ledford2020].
+
+In all fields of science, increasing access to data and code used for pre-printed or published research is a step in the direction of more transparent, reproducible, and reliable research. The ongoing COVID-19 pandemic has created a novel, constantly changing scientific culture that should be navigated with the utmost care so as to uphold standards of scientific practice for both the research community and the safety of the general public. Our analysis shows that there is much improvement to be made in the areas of open data and code availability within COVID-19 pre-print papers on medRxiv.
 
 
 ## Weaknesses and next steps
 
-- No open data/code was verified manually, all dependent on algorithm
-- Publication info has high rate of false negatives (i.e. medRxiv data seems to miss a lot of papers that go on to be published)
-- Want to look at geographic distribution and prevalence of open data/code - influence on open data policies and timing throughout pandemic
-- Extend research to other indicators of reproducibility
+In this paper we consider only pre-prints from medRxiv, but this analysis can and should be extended to other pre-print servers including bioRxiv and arXiv. The `medrxivr` package [@citemedrxivr] can be used with the bioRxiv API as well, and our code can be modified to conduct the same scraping and text mining procedure as was used for medRxiv data.
 
+We also wish to expand our analysis to consider the geographic distribution of research and the potential influence of different practices and policies concerning open science as pre-prints vary by location. This is pertinent to our current paper as the epicenter of the virus spread (and thus of scientific output) has shifted throughout the pandemic which has implications for our time-based analysis. 
+
+An important weakness to note is the potential presence of false negatives in indicators of publication in our data set. @abdill2019 estimate that the false-negative rate may be as high as 37.5 percent for data pulled from the bioRxiv API, meaning analysis of published papers may represent only a fraction of those that have actually been published. It is unclear to what extent this is the case for medRxiv or what bias may exist in the subset of pre-prints for which publication was detected, as it is likely that this process relies on title-based text matching [@abdill2019]. It is also likely that some of our more recent sampled pre-prints will be published in future which we could not account for at the time of our data collection.
+
+We also recognize that this analysis relies heavily on text-based analysis which was not verfied directly in most cases and may lead to higher levels of uncertainty. In future, we wish to take smaller sub-samples to validate factors like publication status or paper topic beyond simple keyword searches. or API output.
 
 \newpage
 
-# Appendix {-}
+# Appendix 1
+Insert details on keyword search used for machine learning/modelling/simulation
 
 Include info here directly from package documentation (i.e. keywords/phrases used for text parsing)?
 
