--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -65,4 +65,175 @@ publications},
 }
 
 
+@misc{citeWHOtimeline,
+    title = {WHO Director-General's opening remarks at the media briefing on COVID-19 - 11 March 2020},
+    author = {{World Health Organization}},
+    year = {2020},
+    url = {https://www.who.int/director-general/speeches/detail/who-director-general-s-opening-remarks-at-the-media-briefing-on-covid-19---11-march-2020},
+  }
 
+@article{else2020,
+  title={How a torrent of COVID science changed research publishing — in seven charts},
+  author={Holly Else},
+  journal={Nature},
+  volume={588},
+  pages={553},
+  year={2020},
+  publisher={Springer Nature Limited},
+  url={https://doi.org/10.1038/d41586-020-03564-y}
+}
+
+
+@article{citeFraser,
+	author = {Fraser, Nicholas and Brierley, Liam and Dey, Gautam and Polka, Jessica K and P{\'a}lfy, M{\'a}t{\'e} and Nanni, Federico and Coates, Jonathon Alexis},
+	title = {Preprinting the COVID-19 pandemic},
+	elocation-id = {2020.05.22.111294},
+	year = {2021},
+	doi = {10.1101/2020.05.22.111294},
+	publisher = {Cold Spring Harbor Laboratory},
+	URL = {https://www.biorxiv.org/content/early/2021/02/05/2020.05.22.111294},
+	eprint = {https://www.biorxiv.org/content/early/2021/02/05/2020.05.22.111294.full.pdf},
+	journal = {bioRxiv}
+}
+
+@article{citeCSSE,
+  title={An interactive web-based dashboard to track COVID-19 in real time},
+  author={Ensheng Dong and Hongru Du and Lauren Gardner},
+  journal={The Lancet Infectious Diseases},
+  volume={20},
+  issue={5},
+  pages={533--534},
+  year={2020},
+  publisher={Elsevier},
+  url={https://doi.org/10.1016/S1473-3099(20)30120-1}
+}
+
+
+@Inbook{Floca2014,
+author="Floca, Ralf",
+editor="Bartling, S{\"o}nke
+and Friesike, Sascha",
+title="Challenges of Open Data in Medical Research",
+bookTitle="Opening Science: The Evolving Guide on How the Internet is Changing Research, Collaboration and Scholarly Publishing",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="297--307",
+abstract="The success of modern, evidence based and personalized medical research is highly dependent on the availability of a sufficient data basis in terms of quantity and quality. This often also implies topics like exchange and consolidation of data. In the area of conflict between data privacy, institutional structures and research interests, several technical, organizational and legal challenges emerge. Coping with these challenges is one of the main tasks of information management in medical research. Using the example of cancer research, this case study points out the marginal conditions, requirements and peculiarities of handling research data in the context of medical research.",
+isbn="978-3-319-00026-8",
+doi="10.1007/978-3-319-00026-8_22",
+url="https://doi.org/10.1007/978-3-319-00026-8_22"
+}
+
+
+@misc{gill2020,
+    title = {Immediate free access to research: The scholarly response to COVID-19},
+    author = {David Gill},
+    month = {March},
+    year = {2020},
+    howpublished = "\url{https://www.lib.sfu.ca/help/publish/scholarly-publishing/radical-access/scholarly-covid19}"
+  }
+  
+@article{ledford2020,
+  title={High-profile coronavirus retractions raise concerns about data oversight},
+  author={Heidi Ledford and Richard Van Noorden},
+  journal={Nature},
+  volume={582},
+  pages={160},
+  year={2020},
+  publisher={Springer Nature Limited},
+  url={https://doi.org/10.1038/d41586-020-01695-w}
+}
+
+@article{raynaud2021,
+  title={COVID-19-related medical research: a meta-research and critical appraisal},
+  author={Marc Raynaud and Huanxi Zhang and Kevin Louis and Valentin Goutaudier and Jiali Wang and Quentin Dubourg and Yongcheng Wei and Zeynep Demir and Charlotte Debiais and Olivier Aubert and Yassine Bouatou and Carmen Lefaucheur and Patricia Jabre and Longshan Liu and Changxi Wang and Xavier Jouven and Peter Reese and Jean-Philippe Empana and Alexandre Loupy},
+  journal={BMC Medical Research Methodology},
+  volume={21},
+  month={January},
+  year={2020},
+  publisher={Springer Nature Limited},
+  url={https://doi.org/10.1186/s12874-020-01190-w}
+}
+
+@article {abdill2019,
+article_type = {journal},
+title = {Meta-Research: Tracking the popularity and outcomes of all bioRxiv preprints},
+author = {Abdill, Richard J and Blekhman, Ran},
+editor = {Pewsey, Emma and Rodgers, Peter and Greene, Casey S},
+volume = 8,
+year = 2019,
+month = {apr},
+pub_date = {2019-04-24},
+pages = {e45133},
+citation = {eLife 2019;8:e45133},
+doi = {10.7554/eLife.45133},
+url = {https://doi.org/10.7554/eLife.45133},
+journal = {eLife},
+issn = {2050-084X},
+publisher = {eLife Sciences Publications, Ltd},
+}
+
+@article{ferguson2020,
+  title={Report 9: Impact of non-pharmaceutical interventions (NPIs) to reduce COVID-19 mortality and healthcare demand},
+  author={Neil M Ferguson and Daniel Laydon and Gemma Nedjati-Gilani and Natsuko Imai and Kylie Ainslie and Marc Baguelin and Sangeeta Bhatia and Adhiratha Boonyasiri and Zulma Cucunubá and Gina Cuomo-Dannenburg and Amy Dighe and Ilaria Dorigatti and Han Fu and Katy Gaythorpe and Will Green and Arran Hamlet and Wes Hinsley and Lucy Okell and Sabine van Elsland and Hayley Thompson and Robert Verity and Erik Volz and Haowei Wang and Yuanrong Wang and Patrick GT Walker and Caroline Walters and Peter Winskill and Charles Whittaker and Christl A Donnelly and Steven Riley and Azra Ghani},
+  month={March},
+  year={2020},
+  publisher={MRC Centre for Global Infectious Disease Analysis},
+  url={https://doi.org/10.25561/77482}
+}
+
+@article{adam2020,
+  title={Special report: The simulations driving the world’s response to COVID-19},
+  author={David Adam},
+  journal={Nature},
+  volume={580},
+  month={April},
+  year={2020},
+  pages={316--318},
+  publisher={Springer Nature Limited},
+  url={https://doi.org/10.1038/d41586-020-01003-6}
+}
+
+@misc{jin2020,
+    title = {Transparency, Reproducibility, and Validation of COVID-19 Projection Models},
+    author = {Jin Jin and Neha Agarwala and Prosenjit Kundu and Yi Wang and Ruzhang Zhao and Nilanjan Chatterjee},
+    month = {June},
+    year = {2020},
+    howpublished = "\url{https://www.jhsph.edu/covid-19/articles/transparency-reproducibility-and-validation-of-covid-19-projection-models.html}"
+  }
+  
+@article{kwon2020,
+  title={How swamped preprint servers are blocking bad coronavirus research},
+  author={Diana Kwon},
+  journal={Nature},
+  volume={580},
+  month={May},
+  year={2020},
+  pages={130--131},
+  publisher={Springer Nature Limited},
+  url={https://doi.org/10.1038/d41586-020-01394-6}
+}
+
+@Article{citelubridate,
+    title = {Dates and Times Made Easy with {lubridate}},
+    author = {Garrett Grolemund and Hadley Wickham},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {40},
+    number = {3},
+    pages = {1--25},
+    url = {https://www.jstatsoft.org/v40/i03/},
+  }
+
+@article {murray2020,
+	author = {, and Murray, Christopher JL},
+	title = {Forecasting the impact of the first wave of the COVID-19 pandemic on hospital demand and deaths for the USA and European Economic Area countries},
+	elocation-id = {2020.04.21.20074732},
+	year = {2020},
+	doi = {10.1101/2020.04.21.20074732},
+	publisher = {Cold Spring Harbor Laboratory Press},
+	URL = {https://www.medrxiv.org/content/early/2020/04/26/2020.04.21.20074732},
+	eprint = {https://www.medrxiv.org/content/early/2020/04/26/2020.04.21.20074732.full.pdf},
+	journal = {medRxiv}
+}
